data/derived/fa15/progs/unify/prog3582.ml.out
Characters 47-60:
  let stringOfList f l = fun l -> sepConcat("; ")(List.map(f));;
                                                 ^^^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string list
